--- a/MovieFlix/.env
+++ b/MovieFlix/.env
@@ -1,4 +1,4 @@
 VITE_API_KEY=api_key=a1bfc9b174f433fbf3843428b2a54231
 VITE_API=https://api.themoviedb.org/3/movie/
-VITE_SEARCH=https://api.themoviedb.org/3/search/movie/
+VITE_SEARCH=https://api.themoviedb.org/3/search/movie
 VITE_IMG=https://image.tmdb.org/t/p/w500/
